# kepler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  project_config_template.hpp.in  project_path_template.hpp.in  validate_shaders.py
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: deferred.frag  deferred.fsh  deferred.vert  deferredPointLight.frag  deferredPointLight.vert  light.frag  light.fsh  light.vert  light.vsh  lightVolume_directionalLight.frag  lightVolume_pointLight.frag  lightVolume_pointLight.vert  lightVolume_pointLightInstanced.frag  lightVolume_pointLightInstanced.vert  phong.frag  phong.fsh  phong.vert  phong.vsh  position.vert
shaders/postprocessing/: gamma_correction.frag  inversion.frag  postprocessor_skeleton.frag
src/: behavior.cpp  behavior.hpp  behaviors.cpp  behaviors.hpp  binding.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  common.hpp  cube.hpp  deferred_shading_technique.hpp  frame_buffer.cpp  frame_buffer.hpp  fs.cpp  fs.hpp  gbuffer.cpp  gbuffer.hpp  gl.cpp  gl.hpp  gl_object.hpp  image.cpp  image.hpp  input.cpp  input.hpp  input.inl  invoke_result.hpp  lazy.hpp  light.cpp  light.hpp  light_data.cpp  light_data.hpp  light_volume_technique.cpp  light_volume_technique.hpp  main.cpp  material.cpp  material.hpp  object.cpp  object.hpp  optional.hpp  (+20 more)
src/common/: common.hpp  types.cpp  types.hpp
src/data/: cube.hpp  fs.cpp  fs.hpp  image.cpp  image.hpp  quad.hpp
src/gl/: binding.hpp  buffer.cpp  buffer.hpp  frame_buffer.cpp  frame_buffer.hpp  gl.cpp  gl_object.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/renderer/: deferred_shading_technique.hpp  gbuffer.cpp  gbuffer.hpp  light_volume_technique.cpp  light_volume_technique.hpp  postprocessing_pipeline.cpp  postprocessing_pipeline.hpp  postprocessing_step.cpp  postprocessing_step.hpp  postprocessor.cpp  postprocessor.hpp  renderer.cpp  renderer.hpp  simple_technique.cpp  simple_technique.hpp
src/renderer/postprocessing/: postprocessing_pipeline.cpp  postprocessing_pipeline.hpp  postprocessing_step.cpp  postprocessing_step.hpp  postprocessor.cpp  postprocessor.hpp  simple_postprocessing_step.cpp  simple_postprocessing_step.hpp
src/scene/: behavior.cpp  behavior.hpp  behaviors.cpp  behaviors.hpp  camera.cpp  camera.hpp  light.cpp  light.hpp  light_data.cpp  light_data.hpp  material.cpp  material.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp
src/util/: lazy.hpp  map.hpp  optional.hpp  pool.hpp  random.cpp  random.hpp  util.cpp  util.hpp
src/window/: input.cpp  input.inl  window.cpp  window.hpp
